objects/ASI_MFM_Tax_Saving_Line__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Trade_Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Account_Code_Combination__c</fullName>
        <label>Account Code Combination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Consumer_A_P_Payment_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consumer A&amp;P Payment Line</label>
        <referenceTo>ASI_MFM_Payment_Line_Item__c</referenceTo>
        <relationshipLabel>Tax Saving Lines</relationshipLabel>
        <relationshipName>Tax_Saving_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Consumer_A_P_Payment__c</fullName>
        <formula>ASI_MFM_Consumer_A_P_Payment_Line__r.ASI_MFM_Payment__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consumer A&amp;P Payment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Cr_Dr__c</fullName>
        <label>Cr/Dr</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Debit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_ETL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ETL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Fiscal_Year__c</fullName>
        <formula>IF( ASI_MFM_Consumer_A_P_Payment_Line__c != Null,  ASI_MFM_Consumer_A_P_Payment_Line__r.ASI_MFM_Payment__r.ASI_MFM_CN_Fiscal_Year__c,  ASI_MFM_Trade_A_P_Payment_Line__r.ASI_TH_CRM_Payment_Request__r.ASI_CRM_CN_Reference_Code__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_G_L_Date__c</fullName>
        <label>G/L Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Invoice_Number__c</fullName>
        <formula>ASI_MFM_Consumer_A_P_Payment_Line__r.ASI_MFM_Payment__r.ASI_MFM_Invoice_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO__c</fullName>
        <formula>if(ASI_MFM_Consumer_A_P_Payment_Line__c != null, ASI_MFM_Consumer_A_P_Payment_Line__r.ASI_MFM_PO_Line_Item__r.ASI_MFM_PO__r.Name, if(ASI_MFM_Trade_A_P_Payment_Line__c != Null, ASI_MFM_Trade_A_P_Payment_Line__r.ASI_TH_CRM_Payment_Request__r.ASI_TH_CRM_Contract__r.ASI_CRM_CN_PO_No__c, &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Suffix__c</fullName>
        <label>Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax_PO_Number__c</fullName>
        <label>Tax PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax_Saving_Control_Form_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Saving Control Form Line</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_Expense_Control_Form_Line__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Tax Saving Control Form Line</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_Expense_Control_Form_Line__c</referenceTo>
        <relationshipLabel>Tax Saving Lines</relationshipLabel>
        <relationshipName>Tax_Saving_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Trade_A_P_Payment_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trade A&amp;P Payment Line</label>
        <referenceTo>ASI_TH_CRM_PaymentRequestLineItem__c</referenceTo>
        <relationshipLabel>Tax Saving Lines</relationshipLabel>
        <relationshipName>Tax_Saving_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Tax Saving Line</label>
    <listViews>
        <fullName>Interface_Completed</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_ETL__c</columns>
        <columns>ASI_MFM_Account_Code_Combination__c</columns>
        <columns>ASI_MFM_Cr_Dr__c</columns>
        <columns>ASI_MFM_Amount__c</columns>
        <columns>ASI_MFM_G_L_Date__c</columns>
        <columns>ASI_MFM_Invoice_Number__c</columns>
        <columns>ASI_CRM_Trade_Invoice_Number__c</columns>
        <columns>ASI_MFM_PO__c</columns>
        <columns>ASI_MFM_Suffix__c</columns>
        <columns>ASI_MFM_Tax_PO_Number__c</columns>
        <columns>ASI_MFM_Consumer_A_P_Payment__c</columns>
        <columns>ASI_MFM_Trade_A_P_Payment_Line__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Tax_Saving_Line__c.ASI_MFM_CN_Tax_Saving_Line</value>
        </filters>
        <label>3. Interface</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Ready_for_Interface</fullName>
        <booleanFilter>1 AND 2 AND 3 AND (4 or 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_MFM_Account_Code_Combination__c</columns>
        <columns>ASI_MFM_ETL__c</columns>
        <columns>ASI_MFM_Cr_Dr__c</columns>
        <columns>ASI_MFM_PO__c</columns>
        <columns>ASI_MFM_Amount__c</columns>
        <columns>ASI_MFM_G_L_Date__c</columns>
        <columns>ASI_MFM_Invoice_Number__c</columns>
        <columns>ASI_CRM_Trade_Invoice_Number__c</columns>
        <columns>ASI_MFM_Suffix__c</columns>
        <columns>ASI_MFM_Tax_PO_Number__c</columns>
        <columns>ASI_MFM_Consumer_A_P_Payment__c</columns>
        <columns>ASI_MFM_Trade_A_P_Payment_Line__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Tax_Saving_Line__c.ASI_MFM_CN_Tax_Saving_Line</value>
        </filters>
        <filters>
            <field>ASI_MFM_G_L_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ASI_MFM_ETL__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ASI_CRM_Trade_Invoice_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ASI_MFM_Invoice_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>2. Ready for Interface</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X1_Pending_Interface</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_ETL__c</columns>
        <columns>ASI_MFM_Account_Code_Combination__c</columns>
        <columns>ASI_MFM_Cr_Dr__c</columns>
        <columns>ASI_MFM_Amount__c</columns>
        <columns>ASI_MFM_G_L_Date__c</columns>
        <columns>ASI_MFM_Invoice_Number__c</columns>
        <columns>ASI_CRM_Trade_Invoice_Number__c</columns>
        <columns>ASI_MFM_PO__c</columns>
        <columns>ASI_MFM_Suffix__c</columns>
        <columns>ASI_MFM_Tax_PO_Number__c</columns>
        <columns>ASI_MFM_Consumer_A_P_Payment__c</columns>
        <columns>ASI_MFM_Trade_A_P_Payment_Line__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Tax_Saving_Line__c.ASI_MFM_CN_Tax_Saving_Line</value>
        </filters>
        <filters>
            <field>ASI_MFM_G_L_Date__c</field>
            <operation>equals</operation>
            <value>7/13/2020</value>
        </filters>
        <filters>
            <field>ASI_MFM_ETL__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>1. Pending Interface</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X1_Pending_Interface1</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_ETL__c</columns>
        <columns>ASI_MFM_Account_Code_Combination__c</columns>
        <columns>ASI_MFM_Cr_Dr__c</columns>
        <columns>ASI_MFM_Amount__c</columns>
        <columns>ASI_MFM_G_L_Date__c</columns>
        <columns>ASI_MFM_Invoice_Number__c</columns>
        <columns>ASI_CRM_Trade_Invoice_Number__c</columns>
        <columns>ASI_MFM_PO__c</columns>
        <columns>ASI_MFM_Suffix__c</columns>
        <columns>ASI_MFM_Tax_PO_Number__c</columns>
        <columns>ASI_MFM_Consumer_A_P_Payment__c</columns>
        <columns>ASI_MFM_Trade_A_P_Payment_Line__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Tax_Saving_Line__c.ASI_MFM_CN_Tax_Saving_Line</value>
        </filters>
        <filters>
            <field>ASI_MFM_G_L_Date__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>ASI_MFM_ETL__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OBJECT_ID</field>
            <operation>startsWith</operation>
            <value>CS20</value>
        </filters>
        <label>1. Pending Interface</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X1_Pending_Interface_2</fullName>
        <booleanFilter>1 AND 2 AND 3 AND (4 or 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_MFM_Account_Code_Combination__c</columns>
        <columns>ASI_MFM_ETL__c</columns>
        <columns>ASI_MFM_Cr_Dr__c</columns>
        <columns>ASI_MFM_G_L_Date__c</columns>
        <columns>ASI_MFM_Invoice_Number__c</columns>
        <columns>ASI_CRM_Trade_Invoice_Number__c</columns>
        <columns>ASI_MFM_PO__c</columns>
        <columns>ASI_MFM_Suffix__c</columns>
        <columns>ASI_MFM_Tax_PO_Number__c</columns>
        <columns>ASI_MFM_Amount__c</columns>
        <columns>ASI_MFM_Consumer_A_P_Payment__c</columns>
        <columns>ASI_MFM_Trade_A_P_Payment_Line__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Tax_Saving_Line__c.ASI_MFM_CN_Tax_Saving_Line</value>
        </filters>
        <filters>
            <field>ASI_MFM_G_L_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ASI_MFM_ETL__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ASI_CRM_Trade_Invoice_Number__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>ASI_MFM_Invoice_Number__c</field>
            <operation>equals</operation>
        </filters>
        <label>1. Pending Interface(2)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X3_Interface_Completed</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_ETL__c</columns>
        <columns>ASI_MFM_Account_Code_Combination__c</columns>
        <columns>ASI_MFM_Cr_Dr__c</columns>
        <columns>ASI_MFM_Amount__c</columns>
        <columns>ASI_MFM_G_L_Date__c</columns>
        <columns>ASI_MFM_Invoice_Number__c</columns>
        <columns>ASI_CRM_Trade_Invoice_Number__c</columns>
        <columns>ASI_MFM_PO__c</columns>
        <columns>ASI_MFM_Suffix__c</columns>
        <columns>ASI_MFM_Tax_PO_Number__c</columns>
        <columns>ASI_MFM_Consumer_A_P_Payment__c</columns>
        <columns>ASI_MFM_Trade_A_P_Payment_Line__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Tax_Saving_Line__c.ASI_MFM_CN_Tax_Saving_Line</value>
        </filters>
        <filters>
            <field>ASI_MFM_PO__c</field>
            <operation>equals</operation>
            <value>37180055</value>
        </filters>
        <label>3. Interface Completed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X3_Interface_Jewel</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_ETL__c</columns>
        <columns>ASI_MFM_Account_Code_Combination__c</columns>
        <columns>ASI_MFM_Cr_Dr__c</columns>
        <columns>ASI_MFM_Amount__c</columns>
        <columns>ASI_MFM_G_L_Date__c</columns>
        <columns>ASI_MFM_Invoice_Number__c</columns>
        <columns>ASI_CRM_Trade_Invoice_Number__c</columns>
        <columns>ASI_MFM_PO__c</columns>
        <columns>ASI_MFM_Suffix__c</columns>
        <columns>ASI_MFM_Tax_PO_Number__c</columns>
        <columns>ASI_MFM_Consumer_A_P_Payment__c</columns>
        <columns>ASI_MFM_Trade_A_P_Payment_Line__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Tax_Saving_Line__c.ASI_MFM_CN_Tax_Saving_Line</value>
        </filters>
        <filters>
            <field>ASI_CRM_Trade_Invoice_Number__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>ASI_MFM_Consumer_A_P_Payment_Line__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ASI_MFM_G_L_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>3. Interface-Jewel</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X3_Interface_Mindy</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_ETL__c</columns>
        <columns>ASI_MFM_Account_Code_Combination__c</columns>
        <columns>ASI_MFM_Cr_Dr__c</columns>
        <columns>ASI_MFM_Amount__c</columns>
        <columns>ASI_MFM_G_L_Date__c</columns>
        <columns>ASI_MFM_Invoice_Number__c</columns>
        <columns>ASI_CRM_Trade_Invoice_Number__c</columns>
        <columns>ASI_MFM_PO__c</columns>
        <columns>ASI_MFM_Suffix__c</columns>
        <columns>ASI_MFM_Tax_PO_Number__c</columns>
        <columns>ASI_MFM_Consumer_A_P_Payment__c</columns>
        <columns>ASI_MFM_Trade_A_P_Payment_Line__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Tax_Saving_Line__c.ASI_MFM_CN_Tax_Saving_Line</value>
        </filters>
        <filters>
            <field>ASI_MFM_G_L_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>3. Interface-Mindy</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TS-{00000000}</displayFormat>
        <label>Tax Saving Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Saving Lines</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CN_Tax_Saving_Line</fullName>
        <active>true</active>
        <label>CN Tax Saving Line</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>